--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,9 @@
     }());
   </script>
   <script>mocha.setup('bdd')</script>
+  <script src="client.js"></script>
+  <script src="client.request.js"></script>
+  <script src="client.notify.js"></script>
   <script src="server.js"></script>
   <script src="server.provide.js"></script>
   <script src="server.provides.js"></script>
