--- a/test/index.html
+++ b/test/index.html
@@ -28,6 +28,8 @@
   <script src="client.js"></script>
   <script src="client.request.js"></script>
   <script src="client.notify.js"></script>
+  <script src="stream-client.js"></script>
+  <script src="stream-client.request.js"></script>
   <script src="server.js"></script>
   <script src="server.provide.js"></script>
   <script src="server.provides.js"></script>
